--- a/src/example.yaml
+++ b/src/example.yaml
@@ -26,7 +26,7 @@ info:
     A [link](http://example.com).
 
     An image:
-    ![Swagger logo](https://raw.githubusercontent.com/swagger-api/swagger-ui/master/dist/favicon-32x32.png)
+    ![Swagger logo](./images/favicon-32x32.png)
 
     Code block:
 
